# cp2k-output-tools

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  pre-commit.yml  test.yml
cp2k_output_tools/: __init__.py  bandstructure.py  bandstructure_parser.py  cli.py  levelparser.py  parser.py
cp2k_output_tools/blocks/: __init__.py  bibliography.py  cell.py  common.py  condition_number.py  energies.py  forces.py  geo_opt.py  kpoints.py  kv_sections.py  linres.py  mulliken.py  optimization.py  program_info.py  scf.py  sirius.py  vibrational.py  warnings.py
cp2k_output_tools/scripts/: bandstructure.py  pdos.py
cp2k_output_tools/trajectories/: xyz.py  xyz_cli.py
scripts/: check_smdb_runs.py  show_mulliken.py
tests/: test_bs2csv.py  test_bsparse.py  test_cli.py  test_common.py  test_condition_number.py  test_energies.py  test_forces.py  test_kpoints.py  test_kv_sections.py  test_mulliken.py  test_optimization.py  test_parser.py  test_pdos.py  test_program_info.py  test_warnings.py  test_xyz.py  test_xyz_cli.py
tests/inputs/: WO3.cp2k-7.bs  WO3.cp2k-8.bs  graphene-k1-1.pdos  minimal.xyz  mulliken_restricted_snippet.out  mulliken_unrestricted_snippet.out  one_restart.xyz  warning-snippet.out
tests/outputs/: BANDS_output_v5.1.out  BANDS_output_v8.1.out  Si-truncated.out  Si.out  Si_bulk8.out  cell_opt_snippet.out  geo_opt_snippet.out  list-of-atoms.pdos  overlap_condition_snippet.out  restart_before_first.xyz
