[tool.poetry]
name = "cp2k-output-tools"
version = "0.2.0"
description = "Python tools to handle CP2K output files"
authors = ["Tiziano Müller <tiziano.mueller@chem.uzh.ch>"]
repository = "https://github.com/cp2k/cp2k-output-tools"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Intended Audience :: Science/Research",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
regex = "^2020.1"
"ruamel.yaml" = {version = "^0.16.5", optional = true}
dataclasses = {version = "^0.7", python = "~3.6"}

[tool.poetry.extras]
yaml = ["ruamel.yaml"]

[tool.poetry.dev-dependencies]
pytest = "^6.0"
codecov = "^2.0.15"
pytest-cov = "^2.7.1"
pytest-console-scripts = "^0.2.0"

[tool.poetry.scripts]
cp2kparse = 'cp2k_output_tools.cli:cp2kparse'
xyz_restart_cleaner = 'cp2k_output_tools.trajectories.xyz_cli:xyz_restart_cleaner'
cp2k_bs2csv = 'cp2k_output_tools.bandstructure:cp2k_bs2csv'

[tool.black]
line-length = 132
target_version = ['py38']

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
