[tool.poetry]
name = "cp2k-output-tools"
version = "0.5.0"
description = "Python tools to handle CP2K output files"
authors = ["Tiziano Müller <tiziano.mueller@chem.uzh.ch>"]
repository = "https://github.com/cp2k/cp2k-output-tools"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Intended Audience :: Science/Research",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
regex = ">=2021.4,<2024.0"
"ruamel.yaml" = {version = ">=0.16.5,<0.19.0", optional = true}
numpy = "^1.19"
click = "^8.0"
rich = ">=10.7,<14.0"
Pint = ">=0.17,<0.25"

[tool.poetry.extras]
yaml = ["ruamel.yaml"]

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-console-scripts = "^1.2"

[tool.poetry.scripts]
cp2kparse = 'cp2k_output_tools.cli:cp2kparse'
xyz_restart_cleaner = 'cp2k_output_tools.trajectories.xyz_cli:xyz_restart_cleaner'
cp2k_bs2csv = 'cp2k_output_tools.cli:cp2k_bs2csv'
cp2k_pdos = 'cp2k_output_tools.scripts.pdos:cp2k_pdos'

[tool.black]
line-length = 132
target_version = ['py39']

[tool.ruff]
# Enable flake8-bugbear (`B`) and isort (`I`) rules.
select = ["E", "F", "B", "I"]
line-length = 136
# ignore missing strict= argument for zip for py<3.10 compat
ignore = ["B905"]

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
